--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
 p{
-  color: red;
+  color: blue;
+}
+.title-background {
+  background-color: #DAF7A6;
+  height: 80px;
+  border: 5px solid #581845;
+  border-radius: 25px;
+  text-align: center;
 }
