--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 p{
-  color: blue;
+  color: white;
 }
 .title-background {
-  background-color: #DAF7A6;
-  height: 80px;
-  border: 5px solid #581845;
+  background-color: #F2DC7D;
+  height: 40px;
+  border: none;
   border-radius: 25px;
   text-align: center;
 }
